; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_wl_window.c_dataSourceHandleCancelled.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_wl_window.c_dataSourceHandleCancelled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.wl_data_source* }
%struct.wl_data_source = type { i32 }

@_glfw = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@GLFW_PLATFORM_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"Wayland: Unknown clipboard data source\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_data_source*)* @dataSourceHandleCancelled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dataSourceHandleCancelled(i8* %0, %struct.wl_data_source* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.wl_data_source*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.wl_data_source* %1, %struct.wl_data_source** %4, align 8
  %5 = load %struct.wl_data_source*, %struct.wl_data_source** %4, align 8
  %6 = call i32 @wl_data_source_destroy(%struct.wl_data_source* %5)
  %7 = load %struct.wl_data_source*, %struct.wl_data_source** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  %8 = load %struct.wl_data_source*, %struct.wl_data_source** %4, align 8
  %9 = icmp ne %struct.wl_data_source* %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* @GLFW_PLATFORM_ERROR, align 4
  %12 = call i32 @_glfwInputError(i32 %11, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  br label %14

13:                                               ; preds = %2
  store %struct.wl_data_source* null, %struct.wl_data_source** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  br label %14

14:                                               ; preds = %13, %10
  ret void
}

declare dso_local i32 @wl_data_source_destroy(%struct.wl_data_source*) #1

declare dso_local i32 @_glfwInputError(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
